--- a/year-goals-privacy-policy.html
+++ b/year-goals-privacy-policy.html
@@ -9,232 +9,137 @@
   <h1>Privacy Policy</h1>
 
   <p>
-    This privacy policy applies to the Year Goals app (hereby referred to as the
-    "Application") for mobile devices that was created by Bahrican Yeşil
-    (hereby referred to as the "Service Provider") as a Freemium service. This
-    service is intended for use "AS IS".
+    This privacy policy applies to the Year Goals app (the "Application") created by
+    Bahrican Yeşil (the "Service Provider") as a Freemium service. The Application is
+    provided "AS IS".
   </p>
 
   <h2>Information Collection and Use</h2>
 
   <p>
-    The Application collects information when you download and use it. This
-    information may include, but is not limited to:
+    The Application collects information that you voluntarily provide during onboarding
+    to create a personalized new year plan. This may include:
   </p>
 
   <ul>
-    <li>Your device's Internet Protocol address (e.g. IP address)</li>
-    <li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li>
-    <li>The time spent using the Application</li>
-    <li>The operating system you use on your mobile device</li>
+    <li>Your goals and focus areas</li>
+    <li>Your preferences and inputs related to your yearly planning</li>
+    <li>A name or nickname</li>
+    <li>Email address or user ID (only if you choose to create an account or log in)</li>
   </ul>
 
   <p>
-    The Application does not gather precise information about the location of your
-    mobile device (such as GPS-level data).
+    This information is used solely to generate and maintain your personalized plan and to
+    provide the core functionality of the Application.
   </p>
 
   <p>
-    The Application may collect information about the approximate location of your
-    device. This helps the Service Provider determine your general geographical
-    area and may be used in the ways described below:
+    The Application also uses third-party services for analytics, crash reporting, and
+    subscription management. These services may process general usage data to help improve
+    the Application’s performance and reliability.
   </p>
 
+  <h2>Third-Party Services</h2>
+
+  <p>The Application uses the following third-party services:</p>
+
   <ul>
-    <li>
-      <strong>Geolocation Services:</strong> The Service Provider utilizes approximate
-      location data to provide features such as personalized content, relevant
-      recommendations, and location-based services.
-    </li>
-    <li>
-      <strong>Analytics and Improvements:</strong> Aggregated and anonymized location data
-      helps the Service Provider analyze user behavior, identify trends, and
-      improve the overall performance and functionality of the Application.
-    </li>
-    <li>
-      <strong>Third-Party Services:</strong> Periodically, the Service Provider may
-      transmit anonymized location data to external services. These services
-      assist them in enhancing the Application and optimizing their offerings.
-    </li>
+    <li><a href="https://firebase.google.com/support/privacy" target="_blank">Google Analytics for Firebase</a></li>
+    <li><a href="https://firebase.google.com/support/privacy/" target="_blank">Firebase Crashlytics</a></li>
+    <li><a href="https://www.revenuecat.com/privacy" target="_blank">RevenueCat</a></li>
+    <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
   </ul>
 
   <p>
-    The Service Provider may use the information you provide to contact you from
-    time to time to provide you with important information, required notices, and
-    marketing promotions.
+    These services have their own privacy policies and may process data needed to operate
+    their features (e.g., analytics, error reporting, subscription validation).
   </p>
 
-  <p>
-    For a better experience while using the Application, the Service Provider may
-    require you to provide certain personally identifiable information, including
-    but not limited to user ID and email address. The information that the Service
-    Provider requests will be retained and used as described in this privacy policy.
-  </p>
-
-  <h2>Third Party Access</h2>
+  <h2>Data Disclosure</h2>
 
   <p>
-    Only aggregated, anonymized data is periodically transmitted to external
-    services to aid the Service Provider in improving the Application and their
-    service. The Service Provider may share your information with third parties in
-    the ways that are described in this privacy statement.
-  </p>
-
-  <p>
-    Please note that the Application utilizes third-party services that have their
-    own Privacy Policy about handling data. Below are the links to the Privacy
-    Policy of the third-party service providers used by the Application:
+    The Service Provider may disclose information:
   </p>
 
   <ul>
-    <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
-    <li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
-    <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
-    <li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
-  </ul>
-
-  <p>
-    The Service Provider may disclose User Provided and Automatically Collected
-    Information:
-  </p>
-
-  <ul>
-    <li>as required by law, such as to comply with a subpoena or similar legal process;</li>
-    <li>
-      when they believe in good faith that disclosure is necessary to protect
-      their rights, protect your safety or the safety of others, investigate
-      fraud, or respond to a government request;
-    </li>
-    <li>
-      with their trusted service providers who work on their behalf, do not have
-      an independent use of the information disclosed to them, and have agreed to
-      adhere to the rules set forth in this privacy statement.
-    </li>
+    <li>When required by law</li>
+    <li>To protect the rights and safety of users</li>
+    <li>To trusted service providers who assist in operating the Application</li>
   </ul>
 
   <h2>Opt-Out Rights</h2>
 
   <p>
-    You can stop all collection of information by the Application easily by
-    uninstalling it. You may use the standard uninstall processes that may be
-    available as part of your mobile device or via the mobile application
-    marketplace or network.
+    You may stop all data collection by uninstalling the Application. You may also request
+    deletion of your user data at any time.
   </p>
 
-  <h2>Data Retention Policy</h2>
+  <h2>Data Retention</h2>
 
   <p>
-    The Service Provider will retain User Provided data for as long as you use the
-    Application and for a reasonable time thereafter. If you'd like them to delete
-    User Provided Data that you have provided via the Application, please contact
-    them at <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a>,
-    and they will respond within a reasonable time.
+    User-provided data is retained for as long as you use the Application and for a
+    reasonable time afterward. You may request full deletion of your data by contacting:
+    <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a>.
   </p>
 
   <h2>Children</h2>
 
   <p>
-    The Service Provider does not use the Application to knowingly solicit data
-    from or market to children under the age of 13.
-  </p>
-
-  <p>
-    The Application does not address anyone under the age of 13. The Service
-    Provider does not knowingly collect personally identifiable information from
-    children under 13 years of age. In the event that the Service Provider
-    discovers that a child under 13 has provided personal information, they will
-    immediately delete this information from their servers. If you are a parent
-    or guardian and you are aware that your child has provided the Application
-    with personal information, please contact the Service Provider at
-    <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a> so
-    that they can take the necessary actions.
+    The Application is not intended for children under 13, and the Service Provider does
+    not knowingly collect personal information from children under 13. If such information
+    is discovered, it will be deleted promptly.
   </p>
 
   <h2>Security</h2>
 
   <p>
-    The Service Provider is concerned about safeguarding the confidentiality of
-    your information. The Service Provider provides physical, electronic, and
-    procedural safeguards to protect the information they process and maintain.
+    The Service Provider uses reasonable measures to help protect your information.
+    However, no method of storage or transmission is completely secure.
   </p>
 
-  <h2>Changes</h2>
+  <h2>Changes to This Policy</h2>
 
   <p>
-    This Privacy Policy may be updated from time to time for any reason. The
-    Service Provider will notify you of any changes to the Privacy Policy by
-    updating this page with the new Privacy Policy. You are advised to consult
-    this Privacy Policy regularly for any changes, as continued use is deemed
-    approval of all changes.
+    This Privacy Policy may be updated occasionally. You are encouraged to review this
+    page for changes. Continued use of the Application constitutes acceptance of the
+    updated policy.
   </p>
 
-  <p><strong>This privacy policy is effective as of 2024-12-21.</strong></p>
+  <p><strong>Effective Date: 2024-12-21</strong></p>
 
   <h2>Your Consent</h2>
 
   <p>
-    By using the Application, you are consenting to the processing of your
-    information as set forth in this Privacy Policy now and as amended by the
-    Service Provider.
+    By using the Application, you consent to the collection and use of information
+    described in this Privacy Policy.
   </p>
 
   <h2>Consent to Share Consumption Data with Apple</h2>
 
   <p>
-    By using the Application and making in-app purchases, you consent to our
-    sharing of data regarding your usage and consumption of purchased content with
-    Apple, as part of our efforts to resolve refund requests. This information may
-    include details about how you have accessed and interacted with the purchased
-    content. The purpose of sharing this data is to help Apple make an informed
-    decision regarding refund requests. We ensure that such data sharing is done
-    in compliance with Apple's policies and only as necessary to process your
-    requests.
+    If you make in-app purchases on Apple devices, you consent to sharing limited data
+    related to your use of purchased content with Apple for the purpose of evaluating
+    refund requests.
   </p>
 
-  <h2>Account Deletion for Year Goals App Users</h2>
+  <h2>Account Deletion</h2>
 
-  <p>To request deletion of your Year Goals app account and associated data:</p>
+  <p>To request deletion of your Year Goals account and associated data:</p>
 
   <ol>
-    <li>Send an email to <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a></li>
-    <li>Include "Year Goals - Account Deletion Request" in the subject line</li>
-    <li>Provide the email address associated with your account</li>
+    <li>Email <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a></li>
+    <li>Use the subject line: <strong>"Year Goals - Account Deletion Request"</strong></li>
+    <li>Include the email address associated with your account (if applicable)</li>
   </ol>
 
-  <p>Upon receiving your request, we will:</p>
+  <p>Upon receiving your request, the Service Provider will:</p>
 
   <ul>
-    <li>Delete your user profile and authentication data</li>
-    <li>Remove all your goals, progress data, and personal preferences</li>
-    <li>Delete any location data and device information</li>
-    <li>Remove your data from analytics systems</li>
+    <li>Delete your user profile and authentication data (if any)</li>
+    <li>Remove your goals, progress data, and personal preferences</li>
+    <li>Remove your data from analytics and subscription systems where possible</li>
+    <li>Send a confirmation email once deletion is complete</li>
   </ul>
 
-  <h3>Deletion Process</h3>
-
-  <ul>
-    <li>We will process your request within 30 days</li>
-    <li>You will receive a confirmation email once deletion is complete</li>
-    <li>
-      Some anonymous, aggregated analytics data may be retained for app improvement
-      purposes
-    </li>
-    <li>
-      We may retain certain information if required by law
-    </li>
-  </ul>
-
-  <p>
-    For any questions about account deletion, contact
-    <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a>.
-  </p>
-
-  <h2>Contact Us</h2>
-
-  <p>
-    If you have any questions regarding privacy while using the Application, or
-    have questions about these practices, please contact the Service Provider via
-    email at <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a>.
-  </p>
 </body>
 </html>
