docs: Broaden language learner scope, generalize AI model references, and update effective dates in privacy policy and terms.

--- a/eloquence-privacy-policy.html
+++ b/eloquence-privacy-policy.html
@@ -36,7 +36,8 @@
   </p>
 
   <p>
-    Eloquence is an AI-powered ritualized learning companion designed to help advanced English learners achieve native
+    Eloquence is an AI-powered ritualized learning companion designed to help advanced foreign language learners achieve
+    native
     mastery through Socratic dialogue and emotional reflection.
   </p>
 
@@ -56,7 +57,7 @@
       stored to maintain your private diary and track emotional trends.</li>
     <li><strong>Educational Progress:</strong> Data on vocabulary usage (e.g., C1/C2 level words), session
       participation, and goals are collected to provide "The Native Bridge" learning metrics.</li>
-    <li><strong>Onboarding Data:</strong> Your current English level and specific learning goals provided during setup.
+    <li><strong>Onboarding Data:</strong> Your current language level and specific learning goals provided during setup.
     </li>
   </ul>
 
@@ -74,8 +75,7 @@
 
   <p>
     Eloquence leverages advanced AI models for its core features. Your inputs (voice and text) are processed by
-    <strong>Google Gemini</strong> models (including Gemini 2.0 Pro and Multimodal Live) to generate responses and
-    content.
+    <strong>AI</strong> models to generate responses and content.
   </p>
 
   <p>The Application also uses the following third-party services for infrastructure and operations:</p>
@@ -142,7 +142,7 @@
     Policy on this page.
   </p>
 
-  <p><strong>Effective Date: 2026-01-01</strong></p>
+  <p><strong>Effective Date: 2026-01-06</strong></p>
 
   <h2>Account Deletion & Data Removal</h2>
 
