--- a/eloquence-terms-conditions.html
+++ b/eloquence-terms-conditions.html
@@ -34,9 +34,9 @@
 
   <h2>1. The Service</h2>
   <p>
-    Eloquence provides a dual-purpose AI companion for advanced English learners. Through "The Symposium" and "The
-    Reflection" rituals, users engage with AI personas (Socratic Coach and Empathetic Therapist) powered by Google
-    Gemini 2.0. The goal is to provide linguistic refactoring and intellectual/emotional growth.
+    Eloquence provides a dual-purpose AI companion for advanced language learners. Through "The Symposium" and "The
+    Reflection" rituals, users engage with AI personas (Socratic Coach and Empathetic Therapist) powered by AI. The goal
+    is to provide linguistic refactoring and intellectual/emotional growth.
   </p>
 
   <h2>2. AI Disclaimer (Important)</h2>
@@ -50,7 +50,7 @@
       <strong>Eloquence is NOT a medical or mental health service.</strong> The AI is not a licensed therapist. If you
       are experiencing a mental health crisis, please contact professional emergency services immediately.
     </li>
-    <li><strong>AI Accuracy:</strong> While we use Google Gemini 2.0, AI can "hallucinate" or provide incorrect
+    <li><strong>AI Accuracy:</strong> While we use AI, AI can "hallucinate" or provide incorrect
       information. Use the output at your own discretion.</li>
   </ul>
 
@@ -115,7 +115,7 @@
     <a href="mailto:bahricanyesildev@gmail.com">bahricanyesildev@gmail.com</a>
   </p>
 
-  <p><strong>Effective Date: 2026-01-01</strong></p>
+  <p><strong>Effective Date: 2026-01-06</strong></p>
 
 </body>
 
